added features about Kenmore businesses

--- a/Kenmore-main.html
+++ b/Kenmore-main.html
@@ -6,5 +6,12 @@
     <body>
       <h1>Welcome to Kenmore!</h1>
       <a href="#"><img src="Kenmore.jpg" alt ="an aerial photograph of Kenmore"/></a>
+      <p>Kenmore is a growing city on the north shore of Lake Washington that plays host to a number of industries that include:</p>
+      <ul>
+        <li>The largest seaplane airport in the <strong>World</strong></li>
+        <li>A bustling concrete factory</li>
+        <li>Lumber, lumber, and more lumber!</li>
+        <li>Countless local restaurants and breweries</li>
+      </ul>
     </body>
   </html>
