--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <html>
-    <head>
+    <head> <link href="css/styles.css" rel="stylesheet" type="text/css">
       <title>City of Kenmore</title>
     </head>
     <body>
